# Intuned_AI_Py_JS_Converter

./: .gitignore  README.md  convert.py  main.py  package-lock.json  package.json  pyproject.toml
modules/: batch_processing.py  validation.py
tests/basic_calculator/js/: cli_old.js
tests/basic_calculator/py/: cli.py
tests/cli_no_args/js/: cli_no_args.js
tests/cli_no_args/py/: cli_no_args.py
tests/cli_with_args/js/: cli.js
tests/cli_with_args/py/: cli.py
tests/count_down_timer/js/: count_down_timer.js
tests/count_down_timer/py/: count_down_timer.py
tests/get_stock_price/js/: cli.js  helpers.js
tests/get_stock_price/py/: cli.py  helpers.py
tests/print_pattern/js/: cli.js
tests/print_pattern/py/: cli.py
